First working raft of etch-a-sketch project. Complete w/ grid slider & refresh button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
    
 </head>
 <body>
-    <div id="container">
+    <div id="menu">
+        <h3>Etch-a-Sketch Menu</h3>
+        <div id="slideContainer">
+            <input type="range" min="10" max="100" value="16" class="slider" id="myRange">
+        </div>
+        <div id="sliderDiv"> Size = X x X </div>
+        <button class = "btn" id="refresh">Refresh</button>
+        </div>
+        <div id="container">
     </div>
 
 
